k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tourism-service
spec:
  type: NodePort
  selector:
    app: tourism
  ports:
    - port: 80
      targetPort: 8082
      nodePort: 30007
